# qmmm-pme

./: .bumpversion.cfg  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  README.rst  setup.cfg  setup.py  versioneer.py
docs/: .buildinfo  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  qmmm_pme.calculators.html  qmmm_pme.common.html  qmmm_pme.dynamics.html  qmmm_pme.hamiltonians.html  qmmm_pme.html  qmmm_pme.integrators.html  qmmm_pme.interfaces.html  qmmm_pme.plugins.atom_embedding.html  qmmm_pme.plugins.html  qmmm_pme.plugins.plumed.html  qmmm_pme.plugins.pme.html  qmmm_pme.plugins.rigid.html  qmmm_pme.plugins.settle.html  qmmm_pme.records.html  qmmm_pme.wrappers.html  search.html  searchindex.js
docs/.doctrees/: environment.pickle  index.doctree  modules.doctree  qmmm_pme.calculators.doctree  qmmm_pme.common.doctree  qmmm_pme.doctree  qmmm_pme.dynamics.doctree  qmmm_pme.hamiltonians.doctree  qmmm_pme.integrators.doctree  qmmm_pme.interfaces.doctree  qmmm_pme.plugins.atom_embedding.doctree  qmmm_pme.plugins.doctree  qmmm_pme.plugins.plumed.doctree  qmmm_pme.plugins.pme.doctree  qmmm_pme.plugins.rigid.doctree  qmmm_pme.plugins.settle.doctree  qmmm_pme.records.doctree  qmmm_pme.wrappers.doctree
docs/_modules/: index.html
docs/_sources/: modules.rst.txt  qmmm_pme.common.rst.txt  qmmm_pme.hamiltonians.rst.txt  qmmm_pme.interfaces.rst.txt  qmmm_pme.plugins.atom_embedding.rst.txt  qmmm_pme.plugins.pme.rst.txt  qmmm_pme.plugins.rst.txt  qmmm_pme.plugins.settle.rst.txt  qmmm_pme.rst.txt  (+2 more)
example/: example_script.py
qmmm_pme/: __init__.py  __main__.py  _version.py  qmmm_hamiltonian.py  system.py  utils.py
testing/: run_test.py
tests/: psi4_interface_test.py
(+206 files in other folders)
