[metadata]
name = qmmm_pme
version = 1.0.0
description = simulation engine for the QM/MM/PME method
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/johnppederson/qmmm_pme
author = John Pederson
author_email = jpederson6@gatech.edu
license = LGPL-2.1
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU Lesser General Public License v2 (LGPLv2)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Scientific/Engineering :: Chemistry
    Topic :: Scientific/Engineering :: Physics

[options]
packages = find:
python_requires = >=3.8

[options.packages.find]
exclude =
    tests*
    testing*
    example*

[options.package_data]
* =
    *.conf

[bdist_wheel]
universal = True

[flake8]
max-line-length = 80
exclude =
    tests/*,
    testing/*,
    example/*,
    docs/source/conf.py,
    versioneer.py,
    qmmm_pme/_version.py
per-file-ignores =
    qmmm_pme/__init__.py:F401
    qmmm_pme/*/__init__.py:F401

[versioneer]
VCS = git
style = pep440
versionfile_source = qmmm_pme/_version.py
versionfile_build = qmmm_pme/_version.py

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
disable_error_code = method-assign
ignore_missing_imports = true
exclude =
    /qmmm_pme/_version.py
    /docs/*
